fixed spacing between navigation and logo

--- a/app/webroot/css/styles.less
+++ b/app/webroot/css/styles.less
@@ -727,7 +727,7 @@ h1.in-contacts {
 
 .very-big-bottom { margin-bottom: 40px; }
 .big-bottom { margin-bottom: 20px; }
-.small-bottom { margin-bottom: 10px; }
+.small-bottom { margin-bottom: 5px; } 
 
 .big-font { font-size: 22px; line-height: .2;}
 .normal-font { font-size: 16px; }
